--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["problem1", "problem2", "problem3", "problem4", "problem5"]
+members = ["problem1", "problem2", "problem3", "problem4", "problem5", "problem6"]
 
