--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["problem1", "problem10", "problem11", "problem12", "problem2", "problem3", "problem4", "problem5", "problem6", "problem7", "problem8", "problem9"]
+members = ["problem1", "problem10", "problem11", "problem12", "problem13", "problem2", "problem3", "problem4", "problem5", "problem6", "problem7", "problem8", "problem9"]
 
