--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["problem1", "problem10", "problem11", "problem12", "problem13", "problem14", "problem15", "problem16", "problem17", "problem18", "problem19", "problem2", "problem20", "problem21", "problem22", "problem23", "problem24", "problem3", "problem4", "problem5", "problem6", "problem7", "problem8", "problem9"]
+members = ["problem1", "problem10", "problem11", "problem12", "problem13", "problem14", "problem15", "problem16", "problem17", "problem18", "problem19", "problem2", "problem20", "problem21", "problem22", "problem23", "problem24", "problem25", "problem3", "problem4", "problem5", "problem6", "problem7", "problem8", "problem9"]
 
